# personal-website

./: README.md  TODO.md  config.toml
content/: pneat.md
content/blog/: _index.md  cloudflare-routing-gmail.md  css-theming.md  first.md  rust-heroku-postgres.md  syncthing-vps.md  using-criterion.md  yambar-getting-started.md
content/projects/: _index.md  callisp.md  pneat.md  seashell.md
server/: Cargo.toml  Procfile  README.md
server/sql/: add_comment.sql  get_comments.sql  schema.sql
server/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
static/: _redirects  copy_code.js  styles.css  toggle_theme.js
templates/: 404.html  base.html  blog.html  blog_post.html  index.html  page.html  projects.html
templates/tags/: list.html  single.html
