[package]
name = "callumirving-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = { version = "0.2.0", features = ["derive"] }
postgres-openssl = "0.5.0"
openssl = "0.10.40"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.2"
actix-cors = "0.6.1"

# diesel = { version = "1.4.8", features = ["postgres"] }
# r2d2 = "0.8.9"
